--- a/Carlette.html
+++ b/Carlette.html
@@ -108,8 +108,8 @@
 		<div class="container">
 			<div class="app__inner">
 				<div class="app__menu">
-					<ul class="vMenu">
-						<li><a href="#" class="vMenu--active">Project Brief</a></li>
+					<ul class="vMenu"style="position: fixed">
+						<li><a href="#" >Project Brief</a></li>
 						<li><a href="#2" >Background</a></li>
 						<li><a href="#3">Inspiration</a></li>
 						<li><a href="#4">Research</a></li>
@@ -119,20 +119,108 @@
 				<div class="app__main">
 					<div class="text-container">
 						<h1 class="app__main__title">Carlette</h1>
-						<P>Interaction Design / Independent Work</P>
+						<P>Interaction Design / Independent Project</P>
 						<h3>Project Brief</h3>
 						<P>
 							Carlette is a combination of the words car and roulette. As a system designed not only to help those suffering from road rage, but also to become the first step of "car sociality", it can alleviate drivers' pressure significantly, and create a friendly atmosphere.
 						</P>
 						<img src="images/Carlette/1.jpg" >
-						<img src="images/Carlette/0.jpg" style="width: 80%; margin-left: 10%">
+						<img id="2" src="images/Carlette/0.jpg" style="width: 80%; margin-left: 10%">
 
-						<h3>Background & Trend: Car+Social Network</h3>
+						<h3 >Background & Trend: Car+Social Network</h3>
 						<P>Car, as a reflection of owner's taste and status, is much more than merely a vehicle. Currently, there are apps for car-lovers to chat and meet. However, it is more convenient if they can be acquainted with each other more directly.
 
 							With the development of techniques mentioned above, car social networking may be a new trend of socialization. During this fragmented time, People can sit in their level 5 autonomous cars, and chat with people in other cars nearby, which will create a friendly atmosphere for drivers. However, currently there are certain dangers that cannot be ignored. The premise of car social networking is safety. The risk of interference should be minimized.
 
 							Based on existing technology, people could communicate with their counterparts in other cars. Nevertheless, the ideal car social network couldn't be realized now.</P>
+						<img src="images/Carlette/15.jpg" style="width: 60%; margin-left: 20%">
+						<img src="images/Carlette/13.png" >
+						<h3>Road Rage</h3>
+						<P>In China: 35% of the drivers in China admitted that they had "road rage", according to a research by professor Yuqing Zhang.
+
+							In the US:There are more than 1,200 incidents of road rage on average reported per year in the United States, and this figure is still rising.
+
+							A number of studies have found that individuals with road rage were predominantly young (33 years old on average) and 96.6% male.</P>
+						<h3>The Cause of Road Rage</h3>
+						<P>According to existing reaserches, road rage is caused by the intense pressure drivers faced, such as traffic jam, bad weather, accidents and others' road rage. There is also a belief that drivers need to concentrate when driving, which makes them easier to get tired, anxious and angry. Besides, the behaviors typically associated with road rage can be the result of a disorder known as intermittent explosive disorder that is recognized in the Diagnostic and Statistical Manual of Mental Disorders (DSM),
+							according to an article published by the Associated Press.</P>
+						<img src="images/Carlette/14.jpg" >
+						<h3>Technical Analysis</h3>
+						<P><b>Levels of Autonomous Vehicles:</b><br>
+
+							Level 0: Automated system issues warnings and may momentarily intervene but has no sustained vehicle control.<br>
+							Level 1 ("hands on"): Driver and automated system shares control over the vehicle.<br>
+							Level 2 ("hands off"): The automated system takes full control of the vehicle (accelerating, braking, and steering).<br>
+							Level 3 ("eyes off"): The driver can safely turn their attention away from the driving tasks, e.g. the driver can text or watch a movie.<br>
+							Level 4 ("mind off"): As level 3, but no driver attention is ever required for safety, e.g. the driver may safely go to sleep or leave the driver's seat.<br>
+							Level 5 ("steering wheel optional"): No human intervention is required. An example would be a robotic taxi.</P>
+							<P><b>Currently, some firms declare that they have already achieved the level 5 driving automation.</b></P>
+
+						<img src="images/Carlette/12.png" >
+						<P><b>Internet of Things(IoT)</b></P>
+						<P>The Internet of things (IoT) is the network of physical devices, vehicles, home appliances and other items embedded with electronics, software, sensors, actuators, and connectivity which enables these objects to connect and exchange data.</P>
+						<P><B>IoT is a foundation of smart home appliances, which can be also used in a car.</B></P>
+						<img id="3" src="images/Carlette/33.jpg" style="width: 60%; margin-left: 20%" >
+
+						<h3>Inspiration</h3>
+						<P>Inspired by the chat wheel in Dota2,
+							I hope to design a system allowing drivers to send messages<b> only
+							by pushing the controller at the center. They can choose five of the
+								most frequently used greetings, and set the order.</b></P>
+						<P>Chat Wheel in Dota2 is a system designed to help players from different countries chat friendly. Users can set up 8 phrases in advance, and send them only by moving the mouse to different directions after pressing "y", which will automatically translated into different languages for different players. It allows players to send their message as soon as possible - they
+							only have to remember the direction, instead of the exact position.</P>
+						<img id="4" src="images/Carlette/21.jpg" style="width: 60%; margin-left: 20%" >
+
+						<h3>Interaction Analysis</h3>
+						<P>A round display is better than other forms, according to ergonomics.
+
+							The chat wheel minimized the disturbance during the game, and can be applied in a car as a convenient way of interaction.</P>
+						<P><B>VUI vs Chat wheel</B></P>
+						<P>VUI (Voice User Interface) makes human interaction with computers possible through a voice/speech platform in order to initiate an automated service or process. VUI is also generally belived to be the future interaction approach of intelligent home appliances and cars.</P>
+						<img src="images/Carlette/23.png" >
+
+						<h3>Questionnaire</h3>
+						<P>Different drivers have different needs. Therefore, I asked 46 people to complete a questionnaire about the most frequently used greetings they thought while driving.</P>
+						<P><b>Almost all of the respondents chose the common greetings, such as "thank you". However, only drivers have more than 3 years driving experience tend to choose the options like merge and overtake.</b></P>
+						<img src="images/Carlette/22.png" >
+
+						<h3>Persona</h3>
+						<P>This is a summary of the results in five interviews. The drivers are catagorized into two groups: novice and veteran.</P>
+						<img id="5" src="images/Carlette/34.jpg" >
+
+						<h3>Carlette: The First Step of Car Sociality</h3>
+						<P><b>Carlette is a combination of the words car and roulette. As a system designed not only to help those suffering from road rage, but also to become the first step of "car sociality",
+							it can alleviate drivers' pressure significantly, and create a friendly atmosphere.
+						</b>
+							<br><br>Inspired by the chat wheel in Dota2, drivers can send messages to others only by pushing the controller at the center. They can choose five of the most frequently used greetings, and set the order.
+						</P>
+							<img src="images/Carlette/19.jpg" >
+							<P>This approach of interaction can facilitate the communication between drivers to large extent. Messages sent by others will be displayed on the central screen, after translated into the preset language. Besides, relevant emojis will also be displayed. If drivers do not want to be disturbed, they can also turn off the whole system easily.
+
+							<B><br><br>Different drivers can use different greetings. For example, well-experienced drivers may have the need to remind others while overtaking. Of course, these greetings are all very friendly.
+
+						</b></P>
+						<img src="images/Carlette/17.jpg" >
+
+						<h3>For Others on the Road</h3>
+						<P>There are also some chances to appreciate non-motor vehicles, or pedestrians. When pushing the controller, the screens on the front and rear of the car will also display the greetings accordingly.
+
+						</P>
+						<P><B>Carlette is designed to offer a better experience for EVERYONE on the road.
+
+						</B></P>
+						<img src="images/Carlette/35.png" >
+
+						<h3>Operation</h3>
+						<P>Carlette, as a whole system, is extremely simplified and user-friendly.</P>
+
+						<img src="images/Carlette/36.jpg" >
+
+						<h3>Storyboard Comparison</h3>
+						<P>With the development of autonomous vehicles, car sociality may be a brand-new lifestyle. Anyway, we have to sit in the car and have nothing to do, so why not make some friends? Carlette, which can be realized by current technology, is the first step of "car sociality". </P>
+						<P><b>It also conveys a positive lifestyle - facing the friends on the road with pleasure, instead of regarding them as enemies. Driving should be, and can be an enjoyment.</b></P>
+						<img src="images/Carlette/37.jpg"  >
+						<img src="images/Carlette/38.jpg">
 
 					</div>
 				</div>
@@ -142,11 +230,11 @@
 	<div class="footer footer--dark">
 		<div class="container">
 			<div class="footer__inner">
-				<a href="index_before.html" class="footer__textLogo">William Jin</a>
+				<a href="index.html" class="footer__textLogo">William Jin</a>
 				<div class="footer__data">
 					<div class="footer__data__item">
 						<div class="footer__row">
-							Email: williamjinq@outlook.com</div>
+							Email: qiuj@andrew.cmu.edu</div>
 						<div class="footer__row">
 						</div>
 					</div>
