--- a/CustomizedDesign.html
+++ b/CustomizedDesign.html
@@ -109,10 +109,10 @@
 		<div class="container">
 			<div class="app__inner">
 				<div class="app__menu">
-					<ul class="vMenu">
+					<ul class="vMenu" style="position: fixed">
 						<li><a href="DesignPhilosophy.html" >Design Thinking</a></li>
-						<li><a href="Design%20Process.html" >Design Process</a></li>
-						<li><a href="#" class="vMenu--active">Customized Design</a></li>
+						<li><a href="DesignProcess.html" >Design Process</a></li>
+						<li><a href="#" class="vMenu--active" >Customized Design</a></li>
 
 					</ul>
 				</div>
@@ -136,11 +136,11 @@
 	<div class="footer footer--dark">
 		<div class="container">
 			<div class="footer__inner">
-				<a href="index_before.html" class="footer__textLogo">William Jin</a>
+				<a href="index.html" class="footer__textLogo">William Jin</a>
 				<div class="footer__data">
 					<div class="footer__data__item">
 						<div class="footer__row">
-							Email: williamjinq@outlook.com</div>
+							Email: qiuj@andrew.cmu.edu</div>
 						<div class="footer__row">
 						</div>
 					</div>
