--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="expanded__content">
                 <h1 style="margin-top: 100px; font-size: 50px; font-family: sans-serif; font-weight: lighter; color: #303030"><b>Hi, I'm William.</b> I design (almost) everything.</h1>
                 <p style="font-size: 20px; font-family: sans-serif; font-weight: lighter">I'm passionate about creating great products by combining design, business and technology. You can view my <a href="DesignPhilosophy.html"><b style="text-decoration: underline">design philosophy</b></a>, find me on <a href="https://www.linkedin.com/in/william-jin-405929168/" target="_blank"><b style="text-decoration: underline">Linkedin</b></a>, or
-                    just send me an <a href="mailto:williamjinq@outlook.com"><b style="text-decoration: underline">email</b></a>.</p>
+                    just send me an <a href="mailto:qiuj@andrew.cmu.edu"><b style="text-decoration: underline">email</b></a>.</p>
                 <a href="./pdfs/resume.pdf" class="button button__primary">My Resume</a><br>
             </div>
         </div>
@@ -202,11 +202,11 @@
 <div class="footer footer--dark">
     <div class="container">
         <div class="footer__inner">
-            <a href="index_before.html" class="footer__textLogo">William Jin</a>
+            <a href="index.html" class="footer__textLogo">William Jin</a>
             <div class="footer__data">
                 <div class="footer__data__item">
                     <div class="footer__row">
-                        Email: williamjinq@outlook.com</div>
+                        Email: qiuj@andrew.cmu.edu</div>
                     <div class="footer__row">
                     </div>
                 </div>
