--- a/index_before.html
+++ b/index_before.html
@@ -46,10 +46,10 @@
 		<nav class="nav__mobile"></nav>
 		<div class="container">
 			<div class="navbar__inner">
-				<a href="index_before.html" class="navbar__logo">William</a>
+				<a href="index.html" class="navbar__logo">William</a>
 				<nav class="navbar__menu">
 					<ul>
-						<li><a href="index_before.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 					</ul>
 				</nav>
 				<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" class=""></path></svg></a></div>
@@ -206,11 +206,11 @@
 	<div class="footer footer--dark">
 		<div class="container">
 			<div class="footer__inner">
-				<a href="index_before.html" class="footer__textLogo">William Jin</a>
+				<a href="index.html" class="footer__textLogo">William Jin</a>
 				<div class="footer__data">
 					<div class="footer__data__item">
 						<div class="footer__row">
-							Email: williamjinq@outlook.com</div>
+							Email: qiuj@andrew.cmu.edu</div>
 						<div class="footer__row">
 						</div>
 					</div>
