--- a/page.html
+++ b/page.html
@@ -43,8 +43,8 @@
 		<div class="container">
 			<div class="page__inner">
 				<div class="page__menu">
-					<ul class="vMenu">
-						<li><a href="#" class="vMenu--active">Active page</a></li>
+					<ul class="vMenu" style="position: fixed">
+						<li><a href="#"  >Active page</a></li>
 						<li><a href="#">Second page</a></li>
 						<li><a href="#">Third page</a></li>
 						<li><a href="#">Fourth page</a></li>
