--- a/Blank.html
+++ b/Blank.html
@@ -108,8 +108,8 @@
 		<div class="container">
 			<div class="app__inner">
 				<div class="app__menu">
-					<ul class="vMenu">
-						<li><a href="#" class="vMenu--active">Project Brief</a></li>
+					<ul class="vMenu" style="position: fixed">
+						<li><a href="#"  >Project Brief</a></li>
 						<li><a href="#2" >Background</a></li>
 						<li><a href="#3">Inspiration</a></li>
 						<li><a href="#4">Design Concept</a></li>
@@ -130,11 +130,11 @@
 	<div class="footer footer--dark">
 		<div class="container">
 			<div class="footer__inner">
-				<a href="index_before.html" class="footer__textLogo">William Jin</a>
+				<a href="index.html" class="footer__textLogo">William Jin</a>
 				<div class="footer__data">
 					<div class="footer__data__item">
 						<div class="footer__row">
-							Email: williamjinq@outlook.com</div>
+							Email: qiuj@andrew.cmu.edu</div>
 						<div class="footer__row">
 						</div>
 					</div>
