--- a/DesignPhilosophy.html
+++ b/DesignPhilosophy.html
@@ -109,9 +109,9 @@
 		<div class="container">
 			<div class="app__inner">
 				<div class="app__menu">
-					<ul class="vMenu">
-						<li><a href="DesignPhilosophy.html" class="vMenu--active">Design Thinking</a></li>
-						<li><a href="Design%20Process.html" >Design Process</a></li>
+					<ul class="vMenu" style="position: fixed">
+						<li><a href="DesignPhilosophy.html" class="vMenu--active"  >Design Thinking</a></li>
+						<li><a href="DesignProcess.html" >Design Process</a></li>
 						<li><a href="CustomizedDesign.html" >Customized Design</a></li>
 
 					</ul>
@@ -142,11 +142,11 @@
 	<div class="footer footer--dark">
 		<div class="container">
 			<div class="footer__inner">
-				<a href="index_before.html" class="footer__textLogo">William Jin</a>
+				<a href="index.html" class="footer__textLogo">William Jin</a>
 				<div class="footer__data">
 					<div class="footer__data__item">
 						<div class="footer__row">
-							Email: williamjinq@outlook.com</div>
+							Email: qiuj@andrew.cmu.edu</div>
 						<div class="footer__row">
 						</div>
 					</div>
