--- a/Golfdesk.html
+++ b/Golfdesk.html
@@ -108,8 +108,8 @@
 		<div class="container">
 			<div class="app__inner">
 				<div class="app__menu">
-					<ul class="vMenu">
-						<li><a href="#" class="vMenu--active">Project Brief</a></li>
+					<ul class="vMenu" style="position: fixed">
+						<li><a href="#"  >Project Brief</a></li>
 						<li><a href="#2" >Background</a></li>
 						<li><a href="#3">Inspiration</a></li>
 						<li><a href="#4">Design Concept</a></li>
@@ -127,8 +127,8 @@
 							Golf Desk also conveys its concept to users - design should be harmonious with our life. A good design should make life more convenient and easier, instead of bringing new problems.
 							<b>The form of Golf Desk is also an application of Affordance - a visual cue to indicate the proper way for a user to interact with an object (by Donald A. Norman).</b> The elegant hole on the desk could indicate to users that they should put something into it.
 						</p>
-						<img src="./images/Golf%20Desk/25.jpg" width="60%" style="margin-left: 20%" >
-						<h3 id="2">Background Research: Anxiety & Desk</h3>
+						<img id="2" src="./images/Golf%20Desk/25.jpg" width="60%" style="margin-left: 20%" >
+						<h3 >Background Research: Anxiety & Desk</h3>
 						<P>According to a report released by University of Michigan, people staying in the office are prone to irritability. The clutters and files on the desk will produce a bad feeling in people's mind, which is also a cause of some relevant diseases, according to a latest research. The research also points out that cleaning up the desk is an effective way to relieve anxiety and stress.
 							<br><br>
 							67% of the people are living a sedentary lifestyle.<br>
@@ -160,11 +160,11 @@
 	<div class="footer footer--dark">
 		<div class="container">
 			<div class="footer__inner">
-				<a href="index_before.html" class="footer__textLogo">William Jin</a>
+				<a href="index.html" class="footer__textLogo">William Jin</a>
 				<div class="footer__data">
 					<div class="footer__data__item">
 						<div class="footer__row">
-							Email: williamjinq@outlook.com</div>
+							Email: qiuj@andrew.cmu.edu</div>
 						<div class="footer__row">
 						</div>
 					</div>
