--- a/Uteeth.html
+++ b/Uteeth.html
@@ -108,8 +108,8 @@
 		<div class="container">
 			<div class="app__inner">
 				<div class="app__menu" >
-					<ul class="vMenu">
-						<li><a href="#" class="vMenu--active">Project Brief</a></li>
+					<ul class="vMenu" style="position: fixed">
+						<li><a href="#"  >Project Brief</a></li>
 						<li><a href="#2" >Background</a></li>
 						<li><a href="#3">User Research</a></li>
 						<li><a href="#4">Product Design</a></li>
@@ -153,9 +153,9 @@
 							Apart from that, silical gel has become a new material of brush, because of its durability and bioaffinity.
 
 							Besides, new types of devices like Unico is breaking the boundaries between various kinds of oral health equipment.</P>
-						<img src="images/Uteeth/8.jpg">
+						<img id="3" src="images/Uteeth/8.jpg">
 
-						<h3>Case Study: Can I see your washroom?</h3>
+						<h3 >Case Study: Can I see your washroom?</h3>
 						<P>To deeply research, I asked several respondents to take photos of their washrooms. Overall, there are many existing problems and pain points in the current medical system.</P>
 						<img src="images/Uteeth/9.jpg" style="width: 50%; float: left">
 						<img src="images/Uteeth/10.jpg" style="width: 50%; float: right">
@@ -270,11 +270,11 @@
 	<div class="footer footer--dark">
 		<div class="container">
 			<div class="footer__inner">
-				<a href="index_before.html" class="footer__textLogo">William Jin</a>
+				<a href="index.html" class="footer__textLogo">William Jin</a>
 				<div class="footer__data">
 					<div class="footer__data__item">
 						<div class="footer__row">
-							Email: williamjinq@outlook.com</div>
+							Email: qiuj@andrew.cmu.edu</div>
 						<div class="footer__row">
 						</div>
 					</div>
