--- a/CustomizedDesign.html
+++ b/CustomizedDesign.html
@@ -125,7 +125,30 @@
 						</P>
 						<h3>Principles</h3>
 						<P>There are 3 principles of Customized Design.</P>
-						<P>1. More options.<br> As the name suggests, </P>
+						<p><b>1. More options, including opening, closing, and setting different strength levels.</b><br><br>
+							As the name suggests, Customized Design makes it possible for users to set up their options. Thus, the product has to provide different options to its users, such as activating a function, disabling a function, and choosing a strength level according to their preferences.
+						</P>
+
+						<p><b>2. An appropriate preset.</b><br><br>
+							Not all of the users want to customize their softwares. For those "lazy" or "light" users who do not want to choose from different options, the product has to provide them with an appropriate preset.
+
+
+						</P>
+
+						<P><B>3. A hidden portal.</B><br><br>
+							The various options has to be hidden, in order to reduce the complexity of interfaces and to avoid the redundancy of functions.
+						</P>
+
+						<h3>Benefits</h3>
+						<P>Also, there are 3 benefits of using Customized Design.</P>
+						<P><B>1. Meeting the demand of different users. </B>
+						</P>
+						<P><B>2. Making the product more attracting. </B><br><br>
+							Users will spend time and effort when customizing their own Apps. Therefore, they tend to continue using the App because their brains want to prove that their efforts are meaningful (a psychological phenomenon). Finally, a positive cycle can be formed and users will spend more time on the product.
+						</P>
+						<P><B>3. Facilitating the data analysis process. </B><br><br>
+							While users are customizing the product, their data and preferences can be easily collected and analyzed.
+						</P>
 
 
 					</div>
