--- a/Uteeth.html
+++ b/Uteeth.html
@@ -242,7 +242,7 @@
 						<P>
 							Eventually, I made a high-fidelity prototype by Principle. (It's a video!:))
 						</P>
-                        <iframe width="560" height="315" align="middle" src="https://www.youtube.com/embed/yYtQNN1HABQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="100%" height="400" align="middle" src="https://www.youtube.com/embed/yYtQNN1HABQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
                         <h3>Service System</h3>
