--- a/index.html
+++ b/index.html
@@ -146,9 +146,11 @@
                 <p >Product & UX Design / Independent Work</p>
             </div>
             <div class="step">
+                <a href="EZChat.html">
                 <div class="step__media">
                     <img src="./images/EZChat/1.jpg" width="90%" class="shadow" >
                 </div>
+                </a>
                 <h4>EZchat</h4>
                 <p >UX Design / Independent Work</p>
             </div>
