--- a/index.html
+++ b/index.html
@@ -192,11 +192,14 @@
                 <p >Interaction Design / Independent Work</p>
             </div>
             <div class="step">
+                <a href="12306.html">
                 <div class="step__media">
-                    <img src="./images/Orca%20Fan/0.jpg" width="90%" class="shadow" >
+                    <img src="./images/12306/AppleDevices2.jpg" width="90%" class="shadow" >
                 </div>
-                <h4>Orca Fan</h4>
-                <p >Product Structure Design / Independent Work</p>
+                </a>
+                <h4>Design Challenge:<br>
+                    Redesign of 12306.cn & its App in 1 Day</h4>
+                <p >UI/UX Design / Independent Project</p>
             </div>
         </div>
     </div>
