--- a/Pianooooo.html
+++ b/Pianooooo.html
@@ -90,7 +90,7 @@
 
 	</style>
 </head>
-<body style="background-color: #f7f7f7; font-family: sans-serif">
+<body style="background-color: #f7f7f7; font-family: Helvetica">
 	<!-- navbar -->
 	<div class="navbar">
 		<nav class="nav__mobile"></nav>
