--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
     <div class="container">
         <div class="expanded__inner">
             <div class="expanded__content">
-                <h1 style="margin-top: 100px; font-size: 50px; font-family: Helvetica; font-weight:lighter; color: #303030"><b>Hi, I'm William.</b> I design (almost) everything.</h1>
+                <h1 style="margin-top: 100px; font-size: 50px; font-family: sans-serif; font-weight:200; color: #303030"><b>Hi, I'm William.</b> I design (almost) everything.</h1>
                 <p style="font-size: 20px; font-family: Helvetica; font-weight: lighter">I'm passionate about creating great products by combining design, business and technology. You can view my <a href="DesignPhilosophy.html"><b style="text-decoration: underline">design philosophy</b></a>, find me on <a href="https://www.linkedin.com/in/william-jin-405929168/" target="_blank"><b style="text-decoration: underline">Linkedin</b></a>, or
                     just send me an <a href="mailto:qiuj@andrew.cmu.edu"><b style="text-decoration: underline">email</b></a>.</p>
-                <a href="./pdfs/resume.pdf" class="button button__primary">My Resume</a><br>
+                <a href="./pdfs/resume.pdf" class="shadow, button button__primary">My Resume</a><br>
             </div>
         </div>
     </div>
@@ -123,7 +123,7 @@
 
 <div class="hero__sub" style="margin-top: -50px">
 		<span id="scrollToNext" >
-			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" class='hero__sub__down' fill="currentColor" width="512px" height="512px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><path d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3z"/></svg>
+			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" class='hero__sub__down' fill="currentColor"  viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><path d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3z"/></svg>
 		</span>
 </div>
 <!-- Steps -->
