--- a/CustomizedDesign.html
+++ b/CustomizedDesign.html
@@ -125,23 +125,38 @@
 						</P>
 						<h3>Principles</h3>
 						<P>There are 3 principles of Customized Design.</P>
-						<p><b>1. More options, including opening, closing, and setting different strength levels.</b><br><br>
+						<p><b>1. More options, including turning-on, turning-off, and setting different strength levels.</b><br><br>
 							As the name suggests, Customized Design makes it possible for users to set up their options. Thus, the product has to provide different options to its users, such as activating a function, disabling a function, and choosing a strength level according to their preferences.
 						</P>
+						<img src="images/Design%20Philosophy/1.jpeg" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
+						<P align="center" style="color: #909090; margin-top: 5px">Soooo many features on Wechat!</P>
+						<img src="images/Design%20Philosophy/2.jpeg" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
+						<P align="center" style="color: #909090; margin-top: 5px">Also, a classic design of viewable Moments from Wechat.</P>
+						<img src="images/Design%20Philosophy/3.jpeg" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
+						<P align="center" style="color: #909090; margin-top: 5px">Facebook is also doing this - users can provide feedback of a shortcut, though they can't turn it of.</P>
+
+
 
 						<p><b>2. An appropriate preset.</b><br><br>
 							Not all of the users want to customize their softwares. For those "lazy" or "light" users who do not want to choose from different options, the product has to provide them with an appropriate preset.
 
 
 						</P>
+						<img src="images/Design%20Philosophy/4.jpeg" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
+						<P align="center" style="color: #909090; margin-top: 5px">The 6 shortcuts on Facebook.</P>
+
 
 						<P><B>3. A hidden portal.</B><br><br>
-							The various options has to be hidden, in order to reduce the complexity of interfaces and to avoid the redundancy of functions.
+							The various options has to be hidden, in order to reduce the complexity of interfaces and to avoid the redundancy of functions.For example, Facebook asks "is this shortcut relevant to you?" only when users long-press a tab, which isn't a common behavior. Most of the apps use a Settings tab to show (or hide) all the options.
 						</P>
+						<img src="images/Design%20Philosophy/5.jpeg" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
+						<P align="center" style="color: #909090; margin-top: 5px">The best way to do this is to integrate all the options into Settings tab!</P>
+
 
 						<h3>Benefits</h3>
 						<P>Also, there are 3 benefits of using Customized Design.</P>
-						<P><B>1. Meeting the demand of different users. </B>
+						<P><B>1. Meeting the demand of different users. </B><br><br>
+							Obviously, users customize their apps according to their own preferences.
 						</P>
 						<P><B>2. Making the product more attracting. </B><br><br>
 							Users will spend time and effort when customizing their own Apps. Therefore, they tend to continue using the App because their brains want to prove that their efforts are meaningful (a psychological phenomenon). Finally, a positive cycle can be formed and users will spend more time on the product.
