--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         .shadow{
 
-            transition: all .2s;
+            transition: all .1s;
         }
         .shadow:hover{
             -webkit-box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.3);
@@ -113,7 +113,7 @@
         <div class="expanded__inner">
             <div class="expanded__content">
                 <h1 style="margin-top: 100px; font-size: 50px; font-family: sans-serif; font-weight:200; color: #303030"><b>Hi, I'm William.</b> I design (almost) everything.</h1>
-                <p style="font-size: 20px; font-family: Helvetica; font-weight: lighter">I'm passionate about creating great products by combining design, business and technology. You can view my <a href="DesignPhilosophy.html"><b style="text-decoration: underline">design philosophy</b></a>, find me on <a href="https://www.linkedin.com/in/william-jin-405929168/" target="_blank"><b style="text-decoration: underline">Linkedin</b></a>, or
+                <p style="font-size: 20px; font-family: Helvetica; font-weight: lighter">I'm passionate about creating great products by combining design, business and technology. You can view my <a href="CustomizedDesign.html"><b style="text-decoration: underline">design philosophy</b></a>, find me on <a href="https://www.linkedin.com/in/william-jin-405929168/" target="_blank"><b style="text-decoration: underline">Linkedin</b></a>, or
                     just send me an <a href="mailto:qiuj@andrew.cmu.edu"><b style="text-decoration: underline">email</b></a>.</p>
                 <a href="./pdfs/resume.pdf" class="shadow, button button__primary">My Resume</a><br>
             </div>
