--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
-<head>
+<head> <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <meta class="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>William Jin | Design Everything</title>
@@ -71,7 +72,8 @@
             -webkit-transition: -webkit-transform .25s ease-in-out;
             transition: -webkit-transform .25s ease-in-out;
             transition: transform .25s ease-in-out;
-            transition: transform .25s ease-in-out, -webkit-transform .25s ease-in-out
+            transition: transform .25s ease-in-out;
+            -webkit-transform .25s ease-in-out;
         }
         .expanded__content{
             width: 60%;
@@ -91,7 +93,7 @@
 
     </style>
 </head>
-<body style="font-family: Helvetica">
+<body style="font-family: 'IBM Plex Sans', sans-serif;">
 
 <div class="navbar navbar--extended">
     <nav class="nav__mobile"></nav>
@@ -112,8 +114,8 @@
     <div class="container">
         <div class="expanded__inner">
             <div class="expanded__content">
-                <h1 style="margin-top: 100px; font-size: 50px; font-family: sans-serif; font-weight:200; color: #303030"><b>Hi, I'm William.</b> I design (almost) everything.</h1>
-                <p style="font-size: 20px; font-family: Helvetica; font-weight: lighter">I'm passionate about creating great products by combining design, business and technology. You can view my <a href="CustomizedDesign.html"><b style="text-decoration: underline">design philosophy</b></a>, find me on <a href="https://www.linkedin.com/in/william-jin-405929168/" target="_blank"><b style="text-decoration: underline">Linkedin</b></a>, or
+                <h1 style="margin-top: 100px; font-size: 50px;   color: #303030"><b>Hi, I'm William.</b> I design (almost) everything.</h1>
+                <p style="font-size: 20px; font-weight: lighter">I'm passionate about creating great products by combining design, business and technology. You can view my <a href="CustomizedDesign.html"><b style="text-decoration: underline">design philosophy</b></a>, find me on <a href="https://www.linkedin.com/in/william-jin-405929168/" target="_blank"><b style="text-decoration: underline">Linkedin</b></a>, or
                     just send me an <a href="mailto:qiuj@andrew.cmu.edu"><b style="text-decoration: underline">email</b></a>.</p>
                 <a href="./pdfs/resume.pdf" class="shadow, button button__primary">My Resume</a><br>
             </div>
