--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang='en'>
-<head>
+<head> <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <meta class="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>William Jin | Design Everything</title>
