--- a/auth.html
+++ b/auth.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang='en'>
-<head> <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
-	<meta class="utf-8">
+<head> <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"><meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Authentication @Evie</title>
 	<link rel='stylesheet' href='css/style.min.css' />
