--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang='en'>
-<head> <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+<head> <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <meta class="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>William Jin | Design Everything</title>
@@ -93,7 +92,7 @@
 
     </style>
 </head>
-<body style="font-family: 'IBM Plex Sans', sans-serif;">
+<body style="font-family: 'Roboto', sans-serif;">
 
 <div class="navbar navbar--extended">
     <nav class="nav__mobile"></nav>
