--- a/Uteeth.html
+++ b/Uteeth.html
@@ -132,9 +132,6 @@
 						</P>
 						<img src="images/Uteeth/2.png" style="width: 60%; margin-left: 20%">
 						<img src="images/Uteeth/3.jpg" style="width: 60%; margin-left: 20%">
-						<h3>PEST Analysis</h3>
-						<P>I did a brainstorm and the PEST analysis on oral health.</P>
-						<img src="images/Uteeth/4.jpg">
 
 						<h3>Field Study: A Trip to the Hospital</h3>
 						<P>To further research(and to pull my wisdom teeth), I went to the dentist in China myself. Normally, a hospital charges about 500 RMB for pulling a wisdom tooth. However, to make an appointment, patients have to get up at dawn and queue up in the cold wind to register, including some of the old. They have to still wait for about two hours after entering into the building.
@@ -184,7 +181,7 @@
 						<img src="images/Uteeth/12.jpg">
 
 						<h3>Functional Analysis: Decay & Odontolith</h3>
-						<P>Decay and odontolith are two of the most serious dental diseases, which can be detected by X-rays.</P>
+						<P>Decay and odontolith are two of the most common dental diseases, which can be detected by X-rays.</P>
 						<img src="images/Uteeth/13.jpg" style="width: 50%; margin-left: 25%">
 
 						<h3>Technical & Material Analysis</h3>
