--- a/index.html
+++ b/index.html
@@ -137,6 +137,17 @@
         <div class="steps__inner">
             <div class="step">
 
+                <a href="IBM.html">
+                    <div class="step__media">
+
+                        <img src="./images/IBM/0.jpg" width="90%" class="shadow" >
+                    </div>
+                </a>
+                <h4>IBM</h4>
+                <p >Product Design Internship</p>
+            </div>
+            <div class="step">
+
                 <a href="Uteeth.html">
                     <div class="step__media">
 
@@ -155,15 +166,7 @@
                 <h4>EZchat</h4>
                 <p >UX Design / Independent Work</p>
             </div>
-            <div class="step">
-                <a href="Pianooooo.html">
-                <div class="step__media">
-                    <img src="./images/Pianooooo/0.0.jpg" width="90%" class="shadow" >
-                </div>
-                </a>
-                <h4>Pianooooo</h4>
-                <p >Service & UX Design / Independent Work</p>
-            </div>
+
         </div>
     </div>
 </div>
@@ -172,15 +175,13 @@
     <div class="container">
         <div class="steps__inner">
             <div class="step">
-
-                <a href="Golfdesk.html">
+                <a href="Pianooooo.html">
                     <div class="step__media">
-
-                        <img src="./images/Golf%20Desk/0.jpg" width="90%" class="shadow" >
+                        <img src="./images/Pianooooo/0.0.jpg" width="90%" class="shadow" >
                     </div>
                 </a>
-                <h4>Golf Desk</h4>
-                <p >Product Design / Team Work</p>
+                <h4>Pianooooo</h4>
+                <p >Service & UX Design / Independent Work</p>
             </div>
 
             <div class="step">
