--- a/index.html
+++ b/index.html
@@ -136,6 +136,15 @@
     <div class="container">
         <div class="steps__inner">
             <div class="step">
+                <a href="EZChat.html">
+                    <div class="step__media">
+                        <img src="./images/EZChat/1.jpg" width="90%" class="shadow" >
+                    </div>
+                </a>
+                <h4>EZchat</h4>
+                <p >UX Design / Independent Project</p>
+            </div>
+            <div class="step">
 
                 <a href="IBM.html">
                     <div class="step__media">
@@ -146,6 +155,15 @@
                 <h4>IBM</h4>
                 <p >Product Design Internship</p>
             </div>
+
+        </div>
+    </div>
+</div>
+<div>
+
+    <div class="container">
+        <div class="steps__inner">
+
             <div class="step">
 
                 <a href="Uteeth.html">
@@ -155,25 +173,11 @@
                     </div>
                 </a>
                 <h4>Uteeth</h4>
-                <p >Product & UX Design / Independent Work</p>
-            </div>
-            <div class="step">
-                <a href="EZChat.html">
-                <div class="step__media">
-                    <img src="./images/EZChat/1.jpg" width="90%" class="shadow" >
-                </div>
-                </a>
-                <h4>EZchat</h4>
-                <p >UX Design / Independent Work</p>
+                <p >Product & UX Design / Independent Project</p>
+
+
             </div>
 
-        </div>
-    </div>
-</div>
-<div class="steps landing__section" style="margin-top: -80px">
-
-    <div class="container">
-        <div class="steps__inner">
             <div class="step">
                 <a href="Pianooooo.html">
                     <div class="step__media">
@@ -181,8 +185,14 @@
                     </div>
                 </a>
                 <h4>Pianooooo</h4>
-                <p >Service & UX Design / Independent Work</p>
+                <p >Service & UX Design / Independent Project</p>
             </div>
+        </div></div></div>
+<div class="steps landing__section" >
+
+    <div class="container">
+        <div class="steps__inner">
+
 
             <div class="step">
                 <a href="Carlette.html">
@@ -191,7 +201,7 @@
                 </div>
                 </a>
                 <h4>Carlette</h4>
-                <p >Interaction Design / Independent Work</p>
+                <p >Interaction Design / Independent Project</p>
             </div>
             <div class="step">
                 <a href="12306.html">
