--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
             -moz-box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.3);
             box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.3);
         }
+        .resume{
+
+            transition: all .1s;
+
+        }
+        .resume:hover{
+            -webkit-box-shadow: 0px 2px 30px 1px rgba(108, 99, 255, 0.5);
+            -moz-box-shadow: 0px 2px 30px 1px rgba(108, 99, 255, 0.5);
+            box-shadow: 0px 2px 30px 1px rgba(108, 99, 255, 0.5);
+        }
         .overlay{
             position: absolute;
 
@@ -116,7 +126,7 @@
                 <h1 style="margin-top: 100px; font-size: 50px;   color: #303030"><b>Hi, I'm William.</b> I design (almost) everything.</h1>
                 <p style="font-size: 20px; font-weight: lighter">I'm passionate about creating great products by combining design, business and technology. You can view my <a href="CustomizedDesign.html"><b style="text-decoration: underline">design philosophy</b></a>, find me on <a href="https://www.linkedin.com/in/william-jin-405929168/" target="_blank"><b style="text-decoration: underline">Linkedin</b></a>, or
                     just send me an <a href="mailto:qiuj@andrew.cmu.edu"><b style="text-decoration: underline">email</b></a>.</p>
-                <a href="./pdfs/resume.pdf" class="shadow, button button__primary">My Resume</a><br>
+                <a href="./pdfs/resume.pdf" class="resume button button__primary">My Resume</a><br>
             </div>
         </div>
     </div>
