--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="expanded__inner">
             <div class="expanded__content">
                 <h1 style="margin-top: 100px; font-size: 50px;   color: #303030; letter-spacing: .5px"><b>Hi, I'm William.</b> I design (almost) everything.</h1>
-                <p style="font-size: 20px; font-weight: lighter; letter-spacing: .2px">I'm passionate about creating great products by combining design, business and technology. You can view my <a href="CustomizedDesign.html"><b style="text-decoration: underline">design philosophy</b></a>, find me on <a href="https://www.linkedin.com/in/william-jin-405929168/" target="_blank"><b style="text-decoration: underline">Linkedin</b></a>, or
+                <p style="font-size: 20px; font-weight: lighter; letter-spacing: .2px">I'm passionate about creating great products by combining ux, business and technology. You can view my <a href="CustomizedDesign.html"><b style="text-decoration: underline">design philosophy</b></a>, find me on <a href="https://www.linkedin.com/in/william-jin-405929168/" target="_blank"><b style="text-decoration: underline">Linkedin</b></a>, or
                     just send me an <a href="mailto:qiuj@andrew.cmu.edu"><b style="text-decoration: underline">email</b></a>.</p>
                 <a href="./pdfs/resume.pdf" class="resume button button__primary" style="letter-spacing: 1px">My Resume</a><br>
             </div>
@@ -152,7 +152,7 @@
                     </div>
                 </a>
                 <h4>EZchat</h4>
-                <p >UX Design / Independent Project</p>
+                <p >Product Design / Independent Project</p>
             </div>
             <div class="step">
 
