--- a/EZChat.html
+++ b/EZChat.html
@@ -118,7 +118,7 @@
 				<div class="app__main">
 					<div class="text-container">
 						<h1 class="app__main__title">EZChat</h1>
-						<P>App Design/ Independent Project<br>
+						<P>Product Design/ Independent Project<br>
 						</P>
 						<h3>Project Brief</h3>
 						<P>EZchat is an App that can make our life easier by several features.</P>
