--- a/CustomizedDesign.html
+++ b/CustomizedDesign.html
@@ -133,6 +133,10 @@
 						<P align="center" style="color: #909090; margin-top: 5px">Also, a classic design of viewable Moments from Wechat.</P>
 						<img src="images/Design%20Philosophy/3.jpeg" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
 						<P align="center" style="color: #909090; margin-top: 5px">Facebook is also doing this - users can provide feedback of a shortcut, though they can't turn it of.</P>
+						<b><P><i>Updated Oct 22, 2019: <br>
+							We can already remove a shortcut we don't like!</i></P></b>
+						<img src="images/Design%20Philosophy/6.jpeg" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
+
 
 
 
