--- a/Pianooooo.html
+++ b/Pianooooo.html
@@ -182,25 +182,28 @@
 						<h3>Persona</h3>
 						<P>According to interviews on 2 men and 2 women, I summarized a persona.</P>
 						<img src="images/Pianooooo/49.png">
+						<!--
 						<h3>Journey Map: One special day of Sarah</h3>
 						<P>There are possibilities of unexpected frustrations as well as chances to meet public pianos in daily life of Sarah.
 
 							Public pianos should appear appropriately, to alleviate, or even eradicate people's bad moods.
 
 							<br><br>Pain Points: Limited users, limited time, boredom, shyness & cost</P>
-						<img src="images/Pianooooo/50.jpg" id="4">
-						<h3>Problems & Solutions: How can we improve public pianos?</h3>
-						<img src="images/Pianooooo/51.png">
 
+						<img src="images/Pianooooo/50.jpg" id="4">
+						-->
+						<h3 id="4">Problems & Solutions: How can we improve public pianos?</h3>
+						<img src="images/Pianooooo/51.png">
+<!--
 						<h3>Competitive Analysis</h3>
 						<P>As a brand-new business model, public pianos are facing the challenge from existing things.
 
 							I tried to combine these different advantages and to avoid disadvantages.
 
 						</P>
-						<img src="images/Pianooooo/52.jpg" id="5">
-
-						<h3>Business Model Canvas</h3>
+						<img src="images/Pianooooo/52.jpg" >
+-->
+						<h3 id="5">Business Model Canvas</h3>
 						<img src="images/Pianooooo/53.jpg">
 
 						<h3>Service Blueprint</h3>
@@ -213,7 +216,7 @@
 
 						<h3>App Design</h3>
 						<h4>Information Architecture</h4>
-						<P>The major function of the App is to reserve/play a piano. Users can check the nearby pianos on the homepage and reserve one. In other cases, they can go to a nearby piano and scan the QR code to play it. Meanwhile, users can buy food, drink, souvenirs, online piano courses and piano tickets via the App. They can also recharge their wallets and view their purchases.
+						<P>The major function of the App is simple - to reserve/play a piano. Users can check the nearby pianos on the homepage and reserve one. In other cases, they can go to a nearby piano and scan the QR code to play it. Meanwhile, users can buy food, drink, souvenirs, online piano courses and piano tickets via the App. They can also recharge their wallets and view their purchases.
 						</P>
 						<img src="images/Pianooooo/14.jpeg" style="width: 50%; margin-left: 25%">
 						<h4>User Interface</h4>
