--- a/EZChat.html
+++ b/EZChat.html
@@ -121,12 +121,13 @@
 						<P>Product Design/ Independent Project<br>
 						</P>
 						<h3>Project Brief</h3>
-						<P>EZchat is an App that can make our life easier by several features.</P>
+						<P>EZchat is a social media App that can make our life easier by several features.</P>
 						<img id="2" src="images/EZChat/1.jpg">
 
 						<h3>Hypothesis: Social Media & Social Status</h3>
 						<P>Social media not only facilitates the creation and sharing of information, but also puts pressure on us and creates a virtual social status for everyone, which is the major source of anxiety.
 <br><br>
+							People using multiple (7 - 11) social media platforms are more likely to feel anxious and depressed, according to a research in 2017.
 							We are afraid of other's success and ourselves' being ignored - which could increase their and decrease our social status respectively.
 <br><br>
 							Pursuing a higher social status is important and even becomes some people's goal - those with higher social status can always receive more "like"s, and be respected on the social media.<br></P>
